# data-driven-fitness

./: .gitignore  DEVLOG.md  Makefile  PROJECT_PLAN.md  README.md  Sam Malik Design System.md  netlify.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/: README.md  docker-compose.yaml
airflow/dags/: ddf_pipeline.py
analysis/: __init__.py  _common.py  energy_balance.py  measurement_uncertainty.py  protein_lean.py  recovery_load.py  regional_hypertrophy.py  volume_efficiency.py
dashboard/: README.md  evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: about.md  data-dictionary.md  index.md  methods.md  reconciliation.md  recovery.md  regional.md
dashboard/sources/ddf/: connection.yaml  dexa_change.sql  dexa_totals.sql  percentile.sql  public.duckdb  reconciliation.sql  recovery.sql  regional.sql  uncertainty.sql  uncertainty_buckets.sql
dashboard/static/: theme.css
dbt_project/: dbt_project.yml  packages.yml  profiles.yml.example
dbt_project/macros/: read_bronze.sql
dbt_project/models/marts/: _marts.yml  (+7 more)
dbt_project/seeds/: _seeds.yml  dim_bodyfat_percentile.csv  dim_exercise.csv
dbt_project/tests/: assert_all_exercises_mapped.sql  assert_dexa_grain_unique.sql  assert_training_volume_grain_unique.sql
docs/: bodyspec_openapi.json  data_dictionary.md  erd.md  findings.md  measurement_notes.md
ingestion/: __init__.py  acsm.py  apple_health.py  bodyspec.py  config.py  loseit.py  nhanes.py  run_ingestion.py  strong.py
scripts/: export_public_db.py
tests/: test_analysis_math.py  test_placeholder.py
(+17 files in other folders)
